@@ -1,3 +1,12 @@
+2010-06-03 MA Yue <velly.empire@gail.com>
+
+    * Add Flashblock, Ease Link and WebMail Notifier
+    * Fix the buy "Window Manager is not recognized:compiz", but I'm not sure if the way is correct
+
+2010-06-02 MA Yue <velly.empire@gmail.com>
+
+    * Complete all Firefox Tweaks
+
 2010-06-01 Homer Xing <homer.xing@gmail.com>
 
     * Move stardict dictionaries into computer doctor pane
